--- a/Task3/index.html
+++ b/Task3/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html> 
+ <!DOCTYPE html> 
 <html lang="uk"> 
 <head> 
  <meta charset="UTF-8"> 
@@ -14,10 +14,8 @@
  <div class="logo"> 
  <p>Футбольний <b>Менеджер</b><i>Офіційний сайт</i></p> 
  <picture> 
- <source srcset="img/ball.webp" type="image/webp"> 
- <img src="img/ball.png" alt="логотип футбольного менеджера у формі 
-футбольного м'яча"> 
- </picture> 
+ <img src="./img/ball.png" alt="логотип футбольного менеджера у формі 
+        футбольного м'яча"> 
  </div> 
  <div class="contacts"> 
  <p><a href="tel:+380975555501">+38 (097) 555-55-01</a><i>Працюємо 
@@ -27,10 +25,8 @@
  </header> 
  <main> 
  <picture class="main-picture"> 
- <source srcset="img/picture.webp" type="image/webp"> 
- <img src="img/picture.jpg" alt="Про футбол ворота футбольний 
-менеджер"> 
- </picture> 
+ <img src="./img/picture.png" alt="Про футбол ворота футбольний 
+                                   менеджер"> 
  <div class="main"> 
  <section class="main-text"> 
  <h1>Про футбол</h1>
